next version - not yet released
==============================
FIXED  : Ticket #1552, Fix the DVD angle display in the information panel (Ctrl+3)

v1.5.2.3456 - 22 July 2011
==============================
NEW    : Added optional fp32 (full float point) processing, fp16 is now half float point
NEW    : Support for BluRay chapters
NEW    : Added Hebrew translation (beta version, the right-to-left layout is not applied
         to all dialogs yet)
NEW    : You can switch between the remaining time and the current time by clicking on the
         time itself on the toolbar
NEW    : Ticket #29, Added an option to make the player on top only when playing
         video files. When using this option, the player won't be on top when
         playing an audio-only file
NEW    : Ticket #1216, Added a "Clear" option to the playlist context menu
NEW    : Ticket #1224, Added OSD messages when changing the audio boost and the audio balance
NEW    : Ticket #1311, Added an "After Playback" => "Lock" option
NEW    : Ticket #1350, Added a time tooltip for the seek bar whose position can be specified
         (above or below the seekbar)
NEW    : Ticket #1377, Keep the same playback speed for all the items of the playlist
NEW    : Ticket #1382, Added an OSD message when taking a screenshot
NEW    : Ticket #1487, Show the saved position for favorites with "remember position"
         enabled in the "Organize Favorites" dialog
NEW    : Ticket #1489, Add the ability to open favorites from the "Organize Favorites"
         dialog by double-clicking on an item
CHANGED: The filters' settings are now saved in
         [HKCU\Software\Gabest\Media Player Classic\Filters]
CHANGED: Improved the OSD message when changing the playback speed
CHANGED: The hand cursor is not used anymore for the video frame unless the
         mouse pointer hovers a button in a DVD menu.
CHANGED: Ticket #519, Replace the "Next (Previous) Playlist Item" command by a